# mermaid-js-ai-agent

./: .env.sample  .gitignore  README.md  ctx_filled_prompts.txt  iteration_mermaid_ctx_filled_prompts.txt  iteration_mermaid_results.txt  mermaid_prompt_1.txt  mermaid_prompt_1_ctx_filled_prompts.txt  mermaid_prompt_1_results.txt  pyproject.toml  rendered_mermaid_prompt_1.txt  resolution_mermaid_ctx_filled_prompts.txt  resolution_mermaid_results.txt
src/mermaid_agent/: __init__.py  examples.py  main.py  mermaid_agent.py
src/mermaid_agent/modules/: llm_module.py  mermaid.py  typings.py  utils.py
src/mermaid_agent/tests/: chainable_test.py  llm_test.py
